--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "my-portfolio",
   "version": "0.1.0",
-  "homepage": "https://SiddharthManjul.github.io/homepage",
+  "homepage": "https://SiddharthManjul.github.io/portfolio",
   "private": true,
   "dependencies": {
     "@nextui-org/react": "^2.2.9",
@@ -12,7 +12,6 @@
     "@testing-library/user-event": "^13.5.0",
     "devicon-react": "^1.1.1",
     "framer-motion": "^10.16.16",
-    "gh-pages": "^6.1.1",
     "next-themes": "^0.2.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
@@ -23,7 +22,7 @@
   },
   "scripts": {
     "predeploy": "npm run build",
-    "deploy": "gh-pages -d build",
+    "deploy": "gh-pages -d build -r https://github.com/SiddharthManjul/portfolio.git",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
@@ -48,6 +47,7 @@
     ]
   },
   "devDependencies": {
+    "gh-pages": "^6.1.1",
     "tailwindcss": "^3.3.6"
   }
 }
